client/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - image: cos-client:latest
          imagePullPolicy: Never
          name: cos-client-test
          ports:
            - containerPort: 3000
